# 4th-year-project

./: README.md
compiler/: .gitignore  compiler.cabal
compiler/app/: Main.hs
compiler/src/: Common.hs  Export.hs  Expressions.hs  Interpreter.hs.bak  Print.hs  Process.hs  Program.hs  RawAST.hs  Types.hs  UnboundedStack.hs
compiler/src/Parser/: Parse.hs  String.hs  Tree.hs
compiler/tests/: test10  test10.occ  test10err  test11  test11.occ  test12  test12.occ  test13  test13.occ  test15  test15.occ  test2  test2.occ  test3  test3.occ  test4  test4.occ  test5  test5.occ  test6  test6.occ  test7  test7.occ  test8  test8.occ  test9  test9.occ
vm/: Cargo.toml
vm/src/: errors.rs  main.rs  time.rs  types.rs
vm/src/program/: mod.rs  string.rs
vm/src/vm/: channel.rs  frame.rs  memory.rs  mod.rs
vm/src/vm/worker/: alt_worker.rs  mod.rs  other_workers.rs  par_worker.rs  ready_worker.rs
