name:                compiler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Types, RawAST, Expressions, Common, Process, UnboundedStack, Export, Parser.Parse, Parser.String, Parser.Tree, Print, Program
  build-depends:       base >= 4.7 && < 5
                     , type-list >= 0.1
                     , mtl
                     , ghc-prim
                     , parsec
                     , containers
                     , reflection
                     , protobuf
                     , GenericPretty
                     , pretty-show
                     , binary
                     , bytestring
  default-language:    Haskell2010

executable compiler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:          -fwarn-incomplete-patterns -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , compiler
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/compiler
